--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,11 +1,11 @@
 @import 'interface'
 @import 'index/header'
-@import 'index/about'
-@import 'index/products'
 @import 'blocks/clients'
 @import 'blocks/reviews'
 @import 'blocks/pricing'
-@import 'index/test'
+@import 'blocks/about'
+@import 'blocks/test'
+@import 'blocks/products'
 @import 'index/showcase'
 @import 'blocks/footer'
 @import 'pricing/header-pricing'
@@ -14,4 +14,7 @@
 @import 'about/about-main'
 @import 'about/about-team'
 @import 'products/header-products'
+@import 'faq/header-faq'
+@import 'faq/about-faq'
+@import 'faq/faq-main'
 @import 'blocks/adaptive'
