--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -78,10 +78,6 @@
     & .about-wrap  
       & .card 
         width: 49%
-  .about-card
-    & .about-wrap 
-      & .card 
-        width: 49%
 @media screen and ( max-width: 865px )
   .products
     & .products-wrap
@@ -124,6 +120,21 @@
         width: 100%
       & .img 
         margin-top: 50px 
+  .faq-main  
+    & .faq-main-wrap 
+      flex-direction: column 
+      & .block 
+        width: 100%
+      & .img 
+        margin-top: 50px 
+@media screen and ( max-width: 720px )
+  .about-faq 
+    & .about-faq-wrap 
+      flex-direction: column 
+      & .card 
+        margin: 1px auto 0  
+        width: 100%
+        height: auto 
 @media screen and ( max-width: 650px )
   .footer 
     & .footer-top  
@@ -137,10 +148,6 @@
         margin-top: 50px 
 @media screen and ( max-width: 615px )
   .about 
-    & .about-wrap  
-      & .card 
-        width: 100%
-  .about-card 
     & .about-wrap  
       & .card 
         width: 100%
