--- a/sass/style.sass
+++ b/sass/style.sass
@@ -17,4 +17,7 @@
 @import 'faq/header-faq'
 @import 'faq/about-faq'
 @import 'faq/faq-main'
+@import 'contact/header-contact'
+@import 'contact/contact-info'
+@import 'contact/map'
 @import 'blocks/adaptive'
