--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -112,6 +112,14 @@
       & .card 
         margin: 50px auto 0 
         width: 100% 
+  .contact-info 
+    & .contact-info-wrap 
+      flex-direction: column 
+      & .block 
+        margin: 50px auto 0 
+        width: 50%
+        &:first-of-type
+          margin-top: 0
 @media screen and ( max-width: 750px )
   .about-main  
     & .about-main-wrap 
@@ -203,6 +211,11 @@
             & .overlay 
               & h2 
                 font-size: 60px 
+@media screen and ( max-width: 430px )
+  .contact-info 
+    & .contact-info-wrap 
+      & .block 
+        width: 100%
 @media screen and ( max-width: 370px )
   .pricing 
     & .pricing-wrap 
